--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,11 @@
-# Database Connection (Template)
-MONGODB_URI=YOUR_MONGODB_CONNECTION_STRING
+//password: MAlpahpWwUDj9cSY
+//un: healthmitra_admin
+// connection: mongodb+srv://healthmitra_admin:MAlpahpWwUDj9cSY@hackathon.q7gdacq.mongodb.net/?retryWrites=true&w=majority&appName=Hackathon
 
-# Add other environment variables as needed, e.g.:
-# PORT=
-# JWT_SECRET=
+# MongoDB Connection String (Actual Secret)
+MONGODB_URI=mongodb+srv://healthmitra_admin:MAlpahpWwUDj9cSY@hackathon.q7gdacq.mongodb.net/?retryWrites=true&w=majority&appName=Hackathon
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=duev61emt
+CLOUDINARY_API_KEY=477373612597395
+CLOUDINARY_API_SECRET=Z0NGJd1g7xDTiJKh73ACGwWRkgw
